platiagro/pipelines/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pipelines
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /pipelines/apis/
    rewrite:
      uri: /
    route:
    - destination:
        host: $(service).$(namespace).svc.$(clusterDomain)
        port:
          number: 8080
    timeout: 300s
